--- a/homebrew/brewfile
+++ b/homebrew/brewfile
@@ -36,7 +36,7 @@ brew "openssl"
 cask "db-browser-for-sqlite"
 cask "docker"
 cask "brave-browser"
-cask "alacritty"
+cask "ghostty"
 cask "obsidian"
 cask "spotify"
 cask "zoom"
